--- a/Web/ECommerce.WebApp.MVC/Views/_ViewImports.cshtml
+++ b/Web/ECommerce.WebApp.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using ECommerce.WebApp.MVC
 @using ECommerce.WebApp.MVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, ECommerce.WebApp.MVC"
+
